--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -109,7 +109,6 @@ a {
   }
   .breadcrumbArea {
     background: #fff;
-    color: #000;
   }
 }
 
@@ -174,7 +173,8 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
 
   .navButton.active {
-    border: 1px solid #6c6c6c
+    border-left: 4px solid #fff;
+    background-color: transparent;
   }
 
   .tabContent {
@@ -224,7 +224,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
 
   .editor-body2 {
-    background-color: #272727;
+    background-color: #1E1E1E;
   }
 
   .serial-no {
@@ -277,6 +277,10 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   .breadcrumbArea {
     color: #d2d2d2;
     border-bottom: 1px solid #636262;
+  }
+
+  .cellEditor .cm-editor {
+    border: 1px solid #1c1c1c;
   }
 }
 
