Show kernel dropdown to select kernel when notebook is opened via FileBroser

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -224,7 +224,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
 
   .editor-body2 {
-    background-color: #1E1E1E;
+    background-color: #1e1e1e;
   }
 
   .serial-no {
