cleanup and beautify UI

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -205,6 +205,10 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     background: #353535;
   }
 
+  .helpNavButton{
+    color: #e2e2e2;
+  }
+
   .openCommandPaletteButton {
     background: #474747;
   }
