add Logout button

--- a/ui/src/ide/topbar/TopBar.scss
+++ b/ui/src/ide/topbar/TopBar.scss
@@ -66,4 +66,10 @@
     top: 50%;
     transform: translate(0px, -50%);
   }
+
+  .logoutButton {
+    background: none;
+    border: none;
+    margin-left: 20px;
+  }
 }
