--- a/ui/src/ide/editor/Launcher.scss
+++ b/ui/src/ide/editor/Launcher.scss
@@ -42,3 +42,29 @@
 .resourceLogoImage {
   height: 64px;
 }
+
+.noKernelsFound {
+  padding: 20px 20px 10px;
+  font-size: 16px;
+  background: #eaeaea;
+  border-radius: 6px;
+  font-weight: 300;
+
+  code {
+    width: 100%;
+    display: block;
+    padding: 10px;
+    background-color: #f4f4f4;
+    margin-bottom: 10px;
+  }
+}
+
+.themeDark * {
+  .noKernelsFound {
+    background: #2d2d2d;
+    color: #f0f0f0;
+  }
+  code {
+    background-color: #3d3d3d;
+  }
+}
