show error dialog instead oalert

--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -218,3 +218,7 @@ table.dataframe td {
 table.dataframe tbody tr:nth-child(even) {
   background-color: #f9f9f9;
 }
+
+.error-head {
+  background-color: rgb(170, 26, 26) !important;
+}
