--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -60,14 +60,6 @@
     display: flex;
   }
 
-  .single-line tr:nth-child(odd) {
-    background: #ffffff;
-  }
-
-  .single-line tr:nth-child(even) {
-    background: #f3f2f6;
-  }
-
   .serial-no {
     color: #473990;
     font-size: 14px;
@@ -176,25 +168,33 @@
 
 table.dataframe {
   border-collapse: collapse;
-  width: 100%;
-  margin: 0;
-  font-size: 14px;
+  min-width: 40%;
   color: #333;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-  border-radius: 2px;
+  font-size: 14px;
+  border: 1px solid #333;
+  border-radius: 8px;
   overflow: hidden;
 }
 
 table.dataframe thead {
-  background-color: #4caf50;
   color: rgb(32, 32, 32);
   text-align: right;
 }
 
-table.dataframe thead th {
+table.dataframe thead {
   padding: 4px 8px;
   font-weight: bold;
   border-bottom: 2px solid #388e3c;
+}
+
+table.dataframe th {
+  background-color: #f2f2f2;
+  text-align: right;
+  font-weight: bold;
+  padding: 4px 8px;
+  border-right: 1px solid #ddd;
+  font-weight: normal;
+  white-space: nowrap;
 }
 
 table.dataframe tbody {
@@ -221,4 +221,62 @@ table.dataframe tbody tr:nth-child(even) {
 
 .error-head {
   background-color: rgb(170, 26, 26) !important;
+}
+
+
+/* Dark theme styles */
+
+/* Dark Theme for Pandas DataFrame Table */
+
+.themeDark{
+  table.dataframe {
+    background-color: #1e1e1e;
+    color: #d4d4d4;
+    border-right: 1px solid #444;
+  }
+
+  /* Header */
+  table.dataframe thead {
+      background-color: #252526;
+      color: #fff;
+  }
+
+  table.dataframe thead th {
+      border-right: 1px solid #444;
+  }
+  
+
+  /* Table Body */
+  table.dataframe tbody tr {
+      border-bottom: 1px solid #333;
+  }
+
+  table.dataframe tbody tr:nth-child(odd) {
+      background-color: #2a2a2a;
+  }
+
+  table.dataframe tbody tr:nth-child(even) {
+      background-color: #1e1e1e;
+  }
+
+  table.dataframe tbody tr:hover {
+      background-color: #3a3d41;
+  }
+
+  /* Cells */
+  table.dataframe td {
+      border-right: 1px solid #333;
+  }
+
+  
+
+  /* Index Column (if any) */
+  table.dataframe th {
+      background-color: #2d2d2d;
+      color: #cccccc;
+      border-right: 1px solid #444;
+  }
+
+ 
+
 }
